@@ -1,4 +1,5 @@
 4.7.2:
+  * Solved a race condition in Replication Manager testcode.
 
 4.7.1:
   * Workaround a problem with un-initialized threads with the
